# blab

./: .bazelrc  .gitignore  MODULE.bazel
.ijwb/: .bazelproject
.vim/: coc-settings.json
blender/registry/core/: BUILD
blender/river/core/: BUILD
commons/java/: BUILD
doc/: allclasses-index.html  allpackages-index.html  constant-values.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  serialized-form.html  type-search-index.js
doc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
doc/org/blab/river/: Callback.html  ConfigurationException.html  Event.html  RiverConsumer.html  RiverException.html  RiverMonitor.html  RiverProducer.html  Status.Code.html  Status.html  package-summary.html  package-tree.html
doc/org/blab/types/: CsvMapperTest.html  DelimitedMapperTest.html  JsonMapperTest.html  TypeMapper.html  package-summary.html  package-tree.html
doc/org/blab/utils/: RingBuffer.html  package-summary.html  package-tree.html
docs/: service-registry.md
pkg/river-java/: BUILD
pkg/types-java/: BUILD
pkg/utils-java/: BUILD
prj/blender/pkg/registry/: BUILD
prj/blender/proto/: BUILD  channel.proto  channel_controller.proto  registry.proto  scheme.proto  scheme_controller.proto  service.proto  service_controller.proto
prj/lambda/svc/demo/: BUILD
types/java/: BUILD
(+175 files in other folders)
